[project]
name = "rag-chatbot"
version = "0.1.0"
description = "venv for rag-chatbot project"
authors = [
    {name = "Farrokh.MANZOURI"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "ipykernel>=6.29.5,<7.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "openai>=1.68.2,<2.0.0",
    "nltk>=3.9.1,<4.0.0",
    "langchain-community>=0.3.20,<0.4.0",
    "unstructured[pdf]>=0.17.2,<0.18.0",
    "datasets>=3.4.1,<4.0.0",
    "ipywidgets>=8.1.5,<9.0.0",
    "plotly>=6.0.1,<7.0.0",
    "nbformat>=5.10.4,<6.0.0",
    "nbconvert>=7.16.6,<8.0.0",
    "jupyter>=1.1.1,<2.0.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


